💄 Meta tags for Storybook

--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -1,3 +1,26 @@
+<meta name=viewport content="width=device-width,initial-scale=1">
+<title>Component Library - Storybook</title>
+<meta  http-equiv=X-UA-Compatible content="ie=edge">
+<meta  http-equiv=content-language content=en-us>
+<meta  name=author content="Stephen Young">
+<meta  name=theme-color content=#ffffff>
+<meta  name=msapplication-TileColor content=#ffffff>
+<meta  name=msapplication-TileImage content=https://cdn.thewickedweb.dev/images/favicon/ms-icon-144x144.png>
+<meta  property=og:title content="Component Libray - Storybook">
+<meta  property=og:site_name content=TheWickedWebDev>
+<meta  property=og:url content="https://www.thewickedweb.dev/storybook/">
+<meta  property=og:description content="This is the component library I built for my site. Im using Storybook to showcase them.">
+<meta  property=og:type content=website>
+<meta  property=og:image content=https://cdn.thewickedweb.dev/images/social/social-card-image-components.jpg>
+<meta  property=twitter:card content=summary_large_image>
+<meta  property=twitter:url content="https://www.thewickedweb.dev/storybook/"">
+<meta  property=twitter:title content="Component Libray - Storybook">
+<meta  property=twitter:description content="This is the component library I built for my site. Im using Storybook to showcase them.">
+<meta  property=twitter:image content=https://cdn.thewickedweb.dev/images/social/social-card-image-components.jpg>
+<meta  name=robots content=index>
+<meta  name=keywords content=HTML,CSS,XML,JavaScript,Storybook,NPM,Component>
+<meta  name=description content="his is the component library I built for my site. Im using Storybook to showcase them.">
+
 <link rel=apple-touch-icon sizes=57x57 href=https://cdn.thewickedweb.dev/images/favicon/apple-icon-57x57.png>
 <link rel=apple-touch-icon sizes=60x60 href=https://cdn.thewickedweb.dev/images/favicon/apple-icon-60x60.png>
 <link rel=apple-touch-icon sizes=72x72 href=https://cdn.thewickedweb.dev/images/favicon/apple-icon-72x72.png>
@@ -12,3 +35,11 @@
 <link rel=icon type=image/png sizes=96x96 href=https://cdn.thewickedweb.dev/images/favicon/favicon-96x96.png>
 <link rel=icon type=image/png sizes=16x16 href=https://cdn.thewickedweb.dev/images/favicon/favicon-16x16.png>
 <link rel=manifest href=https://cdn.thewickedweb.dev/images/favicon/manifest.json>
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-159258682-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'UA-159258682-1');
+</script>
